-
Type:
Bug
-
Status: Closed
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 0.9.3
-
Fix Version/s: 0.9.3
-
Component/s: C glib - Compiler
-
Environment:
Cloud 9 (Ubuntu 14.04.2 LTS; gcc 4.8.2)
-
Patch Info:Patch Available
-
Flags:Patch
Building the test suite for C (GLib) yields this warning from the compiler:
gen-c_glib/t_test_empty_service.c:176:1: warning: ‘t_test_empty_service_processor_process_function_defs’ defined but not used [-Wunused-variable] t_test_empty_service_processor_process_function_defs[0] = {
The compiler should not generate a processing-function-definition array for a service with no methods, considering it is smart enough in this case not to generate the code that would use it.
- is related to
-
THRIFT-3273 c_glib: Generated code tries to convert between function and void pointers
-
- Closed
-
-
THRIFT-3266 c_glib: Multiple compiler warnings building unit tests
-
- Closed
-