THRIFT-3284 c_glib: Compiler: Omit processing-function defs for empty services

This closes: #575